--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,6 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
-    "reactstrap": "^9.1.5",
     "swiper": "^8.4.6",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
@@ -48,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@hookform/resolvers": "^2.9.10"
   }
 }
